# cleanarchitecture-tdd-django

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: settings.py
rentomatic/: apps.py
rentomatic/domain/: room.py
rentomatic/repository/: memory_repository.py
rentomatic/serializers/: room.py
rentomatic/tests/domain/: test_room.py
rentomatic/tests/repository/: test_memrepo.py
rentomatic/tests/serializers/: test_room.py
rentomatic/tests/use_cases/: test_room_list.py
rentomatic/use_cases/: room_list.py
